update css, fix up contact repo and animation overflow

--- a/BackboneContactManager/assets/primary.css
+++ b/BackboneContactManager/assets/primary.css
@@ -22,7 +22,7 @@
     -moz-box-shadow: 10px 10px 33px -5px rgba(0, 0, 0, 0.75);
     box-shadow: 10px 10px 33px -5px rgba(0, 0, 0, 0.75);
 }
-.contact-header{
+.contact-header {
     background-color: #1E23B7;
     width: 30px;
     height: 100%;
@@ -50,17 +50,19 @@
 */
 
 .contact-info {
-	margin-top:17px; text-align: right; margin-left:10px; padding-left:10px;padding-right:20px; display:none
+    margin-top: 30px;
+    text-align: left;
+    margin-left: 10px;
+    padding-left: 30px;
+    padding-right: 20px;
+    display: none
 }
-
 .img-div {
-    float:left;
+    float: left;
 }
-
 .glyphicon {
-    padding-right: 5px;
+    padding-right: 0px;
 }
-
 .bottom-buffer {
-	    margin-bottom: 120px;
+    margin-bottom: 120px;
 }
